<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".presentation.EditProfileFragment">

        <EditText
            android:id="@+id/etName"
            style="@style/regular_gray_text_style"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/et_no_dropdown"
            android:hint="@string/name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/regular_gray_text_style"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/et_no_dropdown"
            android:hint="@string/last_name"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spinner_level"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/et_with_dropdown"
            android:entries="@array/spinner_difficulty"
            android:hint="Level"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etWeight"
            style="@style/regular_gray_text_style"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/et_no_dropdown"
            android:hint="@string/your_weight"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etHeight"
            style="@style/regular_gray_text_style"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/et_no_dropdown"
            android:hint="@string/your_height"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/blue_btn_text"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/blue_btn_bg"
            android:text="@string/save" />
    </LinearLayout>
</FrameLayout>
