<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.RegisterPageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dont_worry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/hello"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_create_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_poppins_regular"
                android:text="@string/create_account_now"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dont_worry" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/et_name_bg"
                android:fontFamily="@font/font_poppins_regular"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/et_name_bg"
                android:fontFamily="@font/font_poppins_regular"
                android:gravity="center"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/et_email_bg"
                android:fontFamily="@font/font_poppins_regular"
                android:gravity="center"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/et_password_bg"
                android:fontFamily="@font/font_poppins_regular"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                style="@style/blue_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/blue_btn_bg"
                android:text="@string/create_account"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_text_before_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_poppins_regular"
                    android:text="@string/already_have_account_q" />

                <TextView
                    android:id="@+id/tv_login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_poppins_regular"
                    android:text="@string/login"
                    android:textColor="@android:color/holo_purple"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_text_before_login"
                    app:layout_constraintTop_toBottomOf="@+id/btn_register" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>